<?xml version="1.0" encoding="utf-8"?>
<resources>
  <string name="app_name">World Metro</string>

  <!--  SearchActivity -->
  <string name="settings">Settings</string>
  <string name="about">About</string>
  <string name="reverse">Reverse FROM and TO</string>
  <string name="from_entry_hint">FROM station or place</string>
  <string name="to_entry_hint">TO station or place</string>
  <string name="general_message">Route and travel time may not be 100% accurate.</string>
  <!--  Below is the array of names of the cities supported in this
       app. -->
  <string name="athens">Athens</string>
  <string name="athens_message"></string>
  <string name="beijing">Beijing</string>
  <string name="beijing_message"></string>
  <string name="munich">Munich</string>
  <string name="munich_message">Note that some stations might not be always available.</string>
  <string name="nanjing">Nanjing</string>
  <string name="nanjing_message"></string>
  <string name="prague">Prague</string>
  <string name="prague_message"></string>
  <string name="shanghai">Shanghai</string>
  <string name="shanghai_message"></string>
  <string name="tokyo">Tokyo</string>
  <string name="tokyo_message"></string>
  <string name="wuhan">Wuhan</string>
  <string name="wuhan_message"></string>

  <!--  Activity Settings -->
  <string name="appearance_preference">Appearance</string>
  <string name="theme_title_preference">Theme</string>
  <string name="theme_dialog_title_preference">Theme</string>
  <string-array name="theme_entries_preference">
    <item>Dark</item>
  	<item>Light</item>
  </string-array>
  <string-array name="theme_values_preference">
    <item>0</item>
    <item>1</item>
  </string-array>
  <string name="text_size_title_preference">Text size</string>
  <string name="text_size_dialog_title_preference">Text size</string>
  <string-array name="text_size_entries_preference">
    <item>Small</item>
    <item>Medium</item>
    <item>Large</item>
  </string-array>
  <string-array name="text_size_values_preference">
    <item>0</item>
    <item>1</item>
    <item>2</item>
  </string-array>
  <string name="language_title_preference">Language for metro info</string>
  <string name="language_dialog_title_preference">Language</string>
  <string-array name="language_entries_preference">
    <item>Local language only</item>
    <item>English (if available) only</item>
    <item>Local and English (if available)</item>
  </string-array>
  <string-array name="language_values_preference">
    <item>local</item>
    <item>english</item>
    <item>both</item>
  </string-array>
  <string name="miscellaneous_preference">Miscellaneous</string>
  <string name="unit_title_preference">Unit</string>
  <string name="unit_dialog_title_preference">Unit</string>
  <string-array name="unit_entries_preference">
    <item>Metric</item>
    <item>Imperial</item>
  </string-array>
  <string-array name="unit_values_preference">
    <item>0</item>
    <item>1</item>
  </string-array>

  <!-- Activity About -->
  <string name="whats_new">What\'s new</string>
  <string name="changelog">Changelog</string>
  <string name="help_and_faq">Help &amp; FAQ</string>
  <string name="other_programs">Other programs</string>
  <string name="about_html">
    <![CDATA[
    <html>
      <body>
        <center><h3>World Metro v0.0.1</h3></center>
        <center><h4>Copyright &copy; 2013 Yujian Zhang</h4></center>
        <center><h4>License: <a href="http://www.gnu.org/licenses/gpl-2.0.html">GNU General Public License v2</a></h4></center>
      </body>
    </html>
    ]]>
  </string>
</resources>
