<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
      android:title="@string/appearance_preference">
    <ListPreference 
        android:key="theme_preference"
        android:title="@string/theme_title_preference" 
        android:summary="@string/theme_summary_preference"
        android:entries="@array/theme_entries_preference" 
        android:entryValues="@array/theme_values_preference"
        android:dialogTitle="@string/theme_dialog_title_preference"
        android:persistent="true"   
        android:defaultValue="0"
        android:shouldDisableView="false" />
    <!-- 16974105 = R.style.Theme_Holo_Light_DarkActionBar --> 
    <ListPreference 
        android:key="text_size_preference"
        android:title="@string/text_size_title_preference" 
        android:summary="@string/text_size_summary_preference"
        android:entries="@array/text_size_entries_preference" 
        android:entryValues="@array/text_size_values_preference"
        android:dialogTitle="@string/text_size_dialog_title_preference"
        android:persistent="true" 
        android:defaultValue="0"
        android:shouldDisableView="false" /> 
  </PreferenceCategory>
</PreferenceScreen>
